--- a/CrazyEightsProject/CrazyEights/src/main/res/values/strings.xml
+++ b/CrazyEightsProject/CrazyEights/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">Crazy Eights</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="hello">Hello World, CrazyEightsActivity!</string>
 
 </resources>
